# login-items

./: Cargo.toml  README.md  extension.json
src/: lib.rs  login_items.rs  main.rs
